# cohere-hackathon

./: .gitignore  conda_env.yml  pyproject.toml
data/: categories.json
src/ad_hoc/: arxiv-analysis.py
src/db/: data_ingestion.py
